[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'cafe-runtime-wasm'
version = '1.0.0'
[dependencies.cafe-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['cafe-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
